# Order-Book

./: .gitignore  CMakeLists.txt  README.md  details.md  pulsebook_dpdk_hello  upcoming_version.md
apps/: pulsebook_afpacket_benchmark_generator.cpp  pulsebook_afpacket_generator.cpp  pulsebook_dpdk_afpacket_engine.cpp  pulsebook_dpdk_afpacket_latency.cpp  pulsebook_dpdk_engine.cpp  pulsebook_dpdk_hello.cpp  pulsebook_dpdk_latency_benchmark.cpp  pulsebook_dpdk_regime_benchmark.cpp  pulsebook_dpdk_ring_test.cpp  pulsebook_dpdk_scenarios.cpp
build-dpdk/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  pulsebook_afpacket_generator  pulsebook_dpdk_afpacket_engine  pulsebook_dpdk_regime_benchmark  pulsebook_dpdk_scenarios  pulsebook_test_engine_scenarios  pulsebook_test_engine_wire_adapter  pulsebook_test_ethernet_market_frame  pulsebook_test_ethernet_order_frame  pulsebook_test_wire_invalid_packet  pulsebook_test_wire_market_data  pulsebook_test_wire_order
build-dpdk/Testing/Temporary/: CTestCostData.txt
build-frame/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  pulsebook_test_ethernet_market_frame  pulsebook_test_ethernet_order_frame  pulsebook_test_wire_invalid_packet  pulsebook_test_wire_market_data  pulsebook_test_wire_order
build-frame/Testing/Temporary/: CTestCostData.txt
build-wire/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
build-wire/Testing/Temporary/: CTestCostData.txt
cmake/: Level3Dpdk.cmake  PulseBookDpdkAfPacket.cmake  PulseBookDpdkAfPacketLatency.cmake  PulseBookDpdkLatency.cmake  PulseBookDpdkRegimeBenchmark.cmake  PulseBookDpdkScenarios.cmake  PulseBookDpdkVirtual.cmake  PulseBookEngineIntegration.cmake  PulseBookEthernet.cmake  PulseBookTestSafety.cmake  PulseBookWire.cmake
diagnostics/level3_phase1/: dpdk_status_20260603_000452.txt  eal_hello.txt
diagnostics/level3_phase4/: build_after_ring_link_fix.txt  build_after_short_names.txt  configure_after_ring_link_fix.txt  configure_after_short_names.txt  ring_packet_path.txt  ring_packet_path_fixed.txt  tests_after_short_names.txt  tests_with_assertions_enabled.txt
diagnostics/level3_phase5/: build.txt  dpdk_engine_path.txt  engine_api.txt  phase4_recheck.txt  tests.txt
diagnostics/level3_phase6/: latency_cpu0.txt
diagnostics/level3_phase7/: build.txt  scenarios_cpu0.txt  scenarios_cpu2.txt  tests.txt
diagnostics/level3_phase8/: build.txt  build_after_warning_fix.txt  regime_cpu2.txt  tests.txt
diagnostics/level3_phase9/: hardware_readiness_20260603_013413.txt  hardware_readiness_20260603_013520.txt
diagnostics/level3_phase9b/: build.txt  configure.txt  tests.txt
docs/level3/: AF_PACKET_LATENCY.md  AF_PACKET_PATH.md  ENGINE_INTEGRATION.md  ETHERNET_FRAME.md  FINAL_RESULTS.md  HARDWARE_READINESS.md  LATENCY_BENCHMARK.md  REGIME_BENCHMARK.md  SCENARIO_VALIDATION.md  VIRTUAL_DPDK_PATH.md  WIRE_PROTOCOL.md
include/pulsebook/book/: fixed_l2_book.hpp
include/pulsebook/common/: types.hpp
include/pulsebook/dpdk/: dpdk_config.hpp  dpdk_latency_recorder.hpp  engine_wire_adapter.hpp  latency_virtual_link.hpp  virtual_link.hpp
include/pulsebook/engine/: trading_engine.hpp
include/pulsebook/order/: order_request.hpp  preallocated_outbox.hpp
include/pulsebook/risk/: risk_guard.hpp
include/pulsebook/strategy/: imbalance_strategy.hpp
include/pulsebook/wire/: endian.hpp  ethernet_frame.hpp  market_data_packet.hpp  order_packet.hpp  wire_constants.hpp  wire_header.hpp
results/level3/: afpacket_engine_fixed.txt  afpacket_generator_fixed.txt  afpacket_latency_cpu0.txt  afpacket_latency_cpu2.txt  generator_cpu0.txt  latency_cpu2.txt  regime_cpu0.txt
scripts/level3/: dpdk_status.sh  phase9_hardware_readiness.sh  remove_veth_afpacket.sh  setup_veth_afpacket.sh
tests/: test_engine_scenarios.cpp  test_engine_wire_adapter.cpp  test_ethernet_market_frame.cpp  test_ethernet_order_frame.cpp  test_wire_invalid_packet.cpp  test_wire_market_data.cpp  test_wire_order.cpp
